# django-template

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  debug.yml  docker-compose.yml  jaeger.yml  prod-http.certbot.yml  prod-http.dev.yml  prod-http.yml  prod.certbot.yml  prod.dev.yml  prod.proxy.yml  prod.test.yml  prod.yml  rabbitmq.yml  readme.md  setup.cfg
.github/workflows/: codecov.yml  docs.yml  flake8.yml  main.yml  push.yml  release.yml  ssh-deploy.yml  tests.yml
docker/: .env.stemsc_data
docker/debug/web/: entrypoint.sh
docker/dev/db/: Dockerfile  postgres.conf
docker/dev/env/: .db.env  .email.env  .env  .mailhog.env  db.env
docker/dev/redis/: Dockerfile  redis.conf  redis.conf.example
docker/dev/web/: Dockerfile  celery-beat.sh  entrypoint.sh  gunicorn.example_config.py
docker/dev/web/entrypoints/: celery-beat.sh  debug.sh  entrypoint.sh  test.sh
docker/modules/: autoheal.yml  celery_beat.yml  docker-compose.common.yml  gitlab.runner.yml  jaeger.yml  mailhog.yml  mailpit.yml  pg_backup.yml  rabbitmq.yml
docker/modules/rabbitmq/: .env
docker/modules/runner/: Dockerfile
docker/prod/db/: pg.conf
docker/prod/env/: .data.env  .db.env  .email.env  .env  .env.db  .env.proxy-companion  .gunicorn.env  .letsencrypt.env  .proxy.env  .test.env
docker/prod/nginx/: Dockerfile  certbot.conf  nginx.conf  proxy.conf
docker/prod/nginx-proxy/: Dockerfile  custom.conf
docker/prod/nginx-proxy/vhost.d/: default
docker/prod/nginx/conf.d/: default.conf  nginx.conf  proxy.conf
docker/prod/redis/: Dockerfile
docker/prod/runner/: Dockerfile  config.toml  gitlab.runner.yml
docker/prod/web/: Dockerfile  celery-beat.sh  entrypoint.sh
docker/prod/web/entrypoints/: celery-beat.sh  entrypoint.sh  tests.sh
docs/: IntegerMultipleChoiceField.md  readme.md  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  intro.rst  quick_start.rst  spelling_wordlist.txt
docs/source/cicd/: github.rst  gitlab.rst
docs/source/environ/: project_env.rst
docs/source/modules/: mailhog.rst  nginx.rst
docs/source/utils/decorators/: except_shell.rst  index.rst
docs/source/utils/utils/: find_dict_in_list.rst  index.rst
templatechart/: .helmignore  Chart.yaml  readme.md  values.yaml
templatechart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
templatechart/templates/tests/: test-connection.yaml
tests/: test_template_tags.py  tests_utils.py
web/: .coveragerc  .flake8  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  setup.cfg
web/api/: urls.py
web/api/v1/: urls.py
web/google_2fa/: admin.py  app_settings.py  apps.py  models.py  permissions.py  serializers.py  services.py  swagger_schemas.py  urls.py  utils.py  views.py
web/google_2fa/migrations/: 0001_initial.py  0002_alter_google2fa_reserve_key.py  0003_auto_20220427_2044.py
web/main/: admin.py  decorators.py  factory.py  fields.py  filters.py  forms.py  logging.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
web/main/management/commands/: startapp.py  wait_for_db.py
web/main/migrations/: 0001_initial.py  0002_set_superuser.py  0003_user_enable_2fa.py
web/main/static/js/: admin_timezone.js
web/main/templates/: pdf.html  user_timezone.html
web/main/templates/emails/: admin_error_handler.html
web/main/templatetags/: main.py
web/main/tests/: test_managements.py  test_managers.py  test_middlewares.py  test_tasks.py  test_template_tags.py  test_user_managers.py  test_views.py  tests_decorators.py  tests_model.py  tests_utils.py
web/src/: asgi.py  celery.py  gunicorn.conf.py  local.py  prod.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py  yasg.py
web/src/additional_settings/: __init__.py  cacheops_settings.py  celery_settings.py  defender_settings.py  jwt_settings.py  logging_settings.py  smtp_settings.py  swagger_settings.py
web/src/requirements/: base.txt  local.txt  production.txt
web/templates/: 403.html  404.html  500.html
web/templates/admin/: base_site.html  index.html
web/templates/rest_framework/: login.html
