[metadata]
name = django-template
description = Django template in docker with docker-compose
long_description = file: readme.md
long_description_content_type = text/markdown
author = Nazarii Romanchenko
url = https://github.com/bandirom/django-template
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
zip_safe = False
install_requires =
    django~=4.1
    psycopg2-binary~=2.9
    redis~=4.3.3
    djangorestframework~=3.14
    drf-yasg~=1.21
    celery~=5.2

    django-filter==22.1
    django-cors-headers~=3.13
    django-microservice-request~=0.5

    # AMQP for RabbitMQ
    pyamqp==0.1.0.7

    # DDoS defender: required redis
    django-defender~=0.9

    # ImageField
    pillow~=9.2

    # Translation
    django-rosetta~=0.9

    # Monitoring System
    sentry-sdk~=1.11

    # for auth system
    dj-rest-auth~=2.2
    djangorestframework-simplejwt~=5.2

[options.extras_require]
local =
    # For SQL debug
    django-silk~=5.0

    # Test coverage
    coverage[toml]~=6.5

    # Freeze time in tests
    freezegun~=1.2

    # Data factory
    factory-boy~=3.2

    # Python packages dependency tree displaying utility
    pipdeptree~=2.2

    # Debug Toolbar
    django-debug-toolbar~=3.7
    django-debug-toolbar-request-history~=0.1

linters =
    black~=22.6
    flake8~=6.0
    isort~=5.10

production =
    gunicorn==20.1.0
    uvicorn[standard]~=0.18

[flake8]
max-line-length = 120
exclude = .ash_history, .cache, venv, media, db.sqlite3, .mypy_cache, .idea */migrations/* *src/settings*.py
