[metadata]
name = django-template
description = Django template
author = Nazarii Romanchenko
url = https://github.com/bandirom/django-template
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: ASGI

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
zip_safe = False
install_requires = file: src/requirements/base.txt

[options.extras_require]
local = file: src/requirements/local.txt
production = file: src/requirements/production.txt

[flake8]
max-line-length = 120
exclude = .ash_history, .cache, venv, media, db.sqlite3, .mypy_cache, .idea, */migrations/*, *src/settings*.py
per-file-ignores =
    src/additional_settings/__init__.py: F401, F403
